[project]
name = "pvc-watcher"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "", email = "michael.bruno1337@gmail.com"},
]
dependencies = [
    "kopf>=1.37.2",
    "kubernetes>=31.0.0",
    "invoke>=2.2.0",
    "black>=24.10.0",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
